--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .dashboard {
@@ -33,8 +32,20 @@ body {
   text-align: center;
   flex: 1;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-around;
+  align-items: "flex-start";
 }
-
+.stat span {
+  font-size: 0.75em;
+}
+.stat-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: "flex-start";
+  flex: 0.75;
+}
 .stat p:first-child {
   font-size: 1.2em;
   margin-bottom: 10px;
@@ -59,7 +70,8 @@ button {
   font-size: 1em;
 }
 
-.loading, .error {
+.loading,
+.error {
   text-align: center;
   font-size: 1.5em;
   margin-top: 20%;
@@ -112,21 +124,18 @@ body {
   margin: 0;
 }
 
-
 .modal-form {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
 }
 
-
 .modal-actions {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
   margin-top: 20px;
-  width: 100%;           
-
+  width: 100%;
 }
 
 .switch-container {
